Bumping to elide 7 Spring boot 3 jdk 19
- JDBC tests not working